--- a/run/00MYC-LIGS.ipynb
+++ b/run/00MYC-LIGS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "8701bad2-01eb-4780-91b5-b99e54030116",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "a680a58d-3eb1-4eb2-be3c-16af080962dc",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "1b3d7056-bf77-4a72-9d3c-e9ff20ad573c",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "76dabcf7-ae7f-4854-92f5-aa79d9646f42",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "cf3768fb-9e3b-42c2-95df-60685437ae5b",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "265104e7-d435-4434-b0b8-78af4b0808e4",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        " 'MBIIyIII': 'DNDGGGGSFSTADQLEMVTELLGGDMVNQSFICDPDDETFIKNIIIQDCMWSGFSAAAKLVSEKLASYQAARKDSGSPNPARGHSVCSTSSLYLQDLSAAASECIDPSVVFPYPLNDSSSPKSCASQDSSAFSPSSDSLLSSTESSPQGSPEPLVLHEETPPTTSSDSEEEQEDEEEIDVVSVEKRQAPGKRSESGSPSA'}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "15daa059-305b-4a7f-9968-e30b3ef94829",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "c8bcc6cd-5de5-4495-bc7e-483f411fb3fc",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "ebed7880-abc7-4fd9-9329-bc67ff5826c1",
    "metadata": {},
    "outputs": [],
@@ -334,6 +334,9 @@
     "  - ligand:\n",
     "      id: [L]\n",
     "      smiles: '{smiles}'\n",
+    "properties:\n",
+    "    - affinity:\n",
+    "        binder: M\n",
     "\"\"\".strip()\n",
     "\n",
     "    with open(yaml_path, \"w\") as yam_file:\n",
@@ -347,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "93d65922-3708-46bb-9f11-6234802dc66a",
    "metadata": {},
    "outputs": [
