--- a/run/00MYC-LIGS.ipynb
+++ b/run/00MYC-LIGS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8701bad2-01eb-4780-91b5-b99e54030116",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a680a58d-3eb1-4eb2-be3c-16af080962dc",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1b3d7056-bf77-4a72-9d3c-e9ff20ad573c",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "76dabcf7-ae7f-4854-92f5-aa79d9646f42",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "cf3768fb-9e3b-42c2-95df-60685437ae5b",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "265104e7-d435-4434-b0b8-78af4b0808e4",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        " 'MBIIyIII': 'DNDGGGGSFSTADQLEMVTELLGGDMVNQSFICDPDDETFIKNIIIQDCMWSGFSAAAKLVSEKLASYQAARKDSGSPNPARGHSVCSTSSLYLQDLSAAASECIDPSVVFPYPLNDSSSPKSCASQDSSAFSPSSDSLLSSTESSPQGSPEPLVLHEETPPTTSSDSEEEQEDEEEIDVVSVEKRQAPGKRSESGSPSA'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "15daa059-305b-4a7f-9968-e30b3ef94829",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "c8bcc6cd-5de5-4495-bc7e-483f411fb3fc",
    "metadata": {},
    "outputs": [
@@ -273,13 +273,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'withaferin_A': 'CC1=C(C(=O)O[C@H](C1)[C@@H](C)[C@H]2CC[C@@H]3[C@@]2(CC[C@H]4[C@H]3C[C@@H]5[C@]6([C@@]4(C(=O)C=C[C@@H]6O)C)O5)C)CO', 'ethoxysanguinarine': 'CCOC1C2=C(C=CC3=C2OCO3)C4=C(N1C)C5=CC6=C(C=C5C=C4)OCO6'}\n"
+      "{'withaferin_A': '[H]OC([H])([H])C1=C(C([H])([H])[H])C([H])([H])[C@]([H])([C@@]([H])(C([H])([H])[H])[C@@]2([H])C([H])([H])C([H])([H])[C@@]3([H])[C@]4([H])C([H])([H])[C@@]5([H])O[C@@]56[C@](C([H])([H])[H])(C(=O)C([H])=C([H])[C@]6([H])O[H])[C@@]4([H])C([H])([H])C([H])([H])[C@@]32C([H])([H])[H])OC1=O', 'ethoxysanguinarine': '[H]c1c([H])c2c(c3c1OC([H])([H])O3)C([H])(OC([H])([H])C([H])([H])[H])N(C([H])([H])[H])c1c-2c([H])c([H])c2c([H])c3c(c([H])c12)OC([H])([H])O3'}\n"
      ]
     }
    ],
    "source": [
-    "#no se protonan previamente\n",
-    "#funcion en desuso\n",
     "from rdkit import Chem\n",
     "\n",
     "def protonation_dict(ligand_dict):\n",
@@ -293,14 +291,14 @@
     "        mol_h = Chem.AddHs(mol)  # Add all hydrogens\n",
     "        protonated[name] = Chem.MolToSmiles(mol_h)\n",
     "    return protonated\n",
-    "#ligs_dict = protonation_dict(ligs_dict)\n",
+    "ligs_dict = protonation_dict(ligs_dict)\n",
     "print(ligs_dict)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ebed7880-abc7-4fd9-9329-bc67ff5826c1",
    "metadata": {},
    "outputs": [],
@@ -338,7 +336,7 @@
     "      smiles: '{smiles}'\n",
     "properties:\n",
     "    - affinity:\n",
-    "        binder: L\n",
+    "        binder: M\n",
     "\"\"\".strip()\n",
     "\n",
     "    with open(yaml_path, \"w\") as yam_file:\n",
@@ -352,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "93d65922-3708-46bb-9f11-6234802dc66a",
    "metadata": {},
    "outputs": [
@@ -421,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
